--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:showIn="@layout/activity_browse"
-                tools:context="de.ub0r.android.basscast.BrowseActivityFragment">
+                tools:context=".BrowseFragment">
 
     <android.support.v7.widget.RecyclerView
             android:id="@android:id/list"
