show media controls in main activity, closes #8

--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -32,9 +32,6 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_content_add"/>
 
-    <MediaController
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"/>
+    <include layout="@layout/content_controls"/>
 
 </android.support.design.widget.CoordinatorLayout>
