--- a/app/src/main/res/layout/content_browse.xml
+++ b/app/src/main/res/layout/content_browse.xml
@@ -1,9 +1,15 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          xmlns:app="http://schemas.android.com/apk/res-auto"
-          android:id="@+id/fragment"
-          android:name="de.ub0r.android.basscast.BrowseFragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior"
-          tools:layout="@layout/fragment_browse"/>
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <fragment
+            android:id="@+id/browse_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="de.ub0r.android.basscast.BrowseFragment"
+            tools:layout="@layout/fragment_browse"/>
+</FrameLayout>
