--- a/app/src/main/res/layout/content_browse.xml
+++ b/app/src/main/res/layout/content_browse.xml
@@ -5,11 +5,6 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    <fragment
-            android:id="@+id/browse_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="de.ub0r.android.basscast.BrowseFragment"
-            tools:layout="@layout/fragment_browse"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout="@layout/fragment_browse">
 </FrameLayout>
