--- a/app/src/main/res/menu/menu_browse_context.xml
+++ b/app/src/main/res/menu/menu_browse_context.xml
@@ -3,6 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+            android:id="@+id/action_play_locally"
+            android:title="@string/action_play_locally"/>
+    <item
             android:id="@+id/action_edit"
             android:title="@string/action_edit"/>
     <item
