--- a/app/src/main/res/layout/list_item_stream.xml
+++ b/app/src/main/res/layout/list_item_stream.xml
@@ -1,44 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/list_selector">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/list_item_stream_height"
+    android:background="@drawable/list_selector"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/list_item_stream_margin_horizontal"
+    android:paddingRight="@dimen/list_item_stream_margin_horizontal">
 
-    <ImageButton
-            android:id="@+id/action_context_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_navigation_more_vert"
-            android:background="@drawable/button_selector"
-            android:text="@string/action_play"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
+        <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/action_context_menu"
-            android:layout_toStartOf="@id/action_context_menu"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:text="A fancy stream"/>
+            android:text="A fancy stream"
+            android:textAppearance="?android:textAppearanceLarge" />
 
-    <TextView
+        <TextView
             android:id="@+id/url"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/action_context_menu"
-            android:layout_toStartOf="@id/action_context_menu"
-            android:textAppearance="?android:textAppearanceSmall"
             android:ellipsize="middle"
             android:maxLines="2"
-            android:text="http://example.org/stream"/>
+            android:text="http://example.org/stream"
+            android:textAppearance="?android:textAppearanceSmall" />
+    </LinearLayout>
 
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/action_context_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/button_selector"
+        android:src="@drawable/ic_navigation_more_vert"
+        android:text="@string/action_context_menu" />
+</LinearLayout>
