add EU cookie consent banner, fixes #34

--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -22,6 +22,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <de.ub0r.android.eucookieconsent.EuCookieConsentView
+        android:id="@+id/eucookieconsent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/background_light"
+        android:elevation="@dimen/eucookieconsent_elevation"
+        android:paddingLeft="@dimen/eucookieconsent_padding_horizontal"
+        android:paddingRight="@dimen/eucookieconsent_padding_horizontal"
+        app:layout_behavior="de.ub0r.android.basscast.BelowToolbarBehavior"
+        app:hideOutsideEu="true"
+        app:urlLeanMore="https://github.com/felixb/basscast/blob/master/PRIVACY.md" />
+
     <include layout="@layout/content_browse"/>
 
     <android.support.design.widget.FloatingActionButton
