--- a/app/src/main/res/menu/menu_browse_activity.xml
+++ b/app/src/main/res/menu/menu_browse_activity.xml
@@ -5,12 +5,21 @@
 
     <item
         android:id="@+id/action_cast"
+        android:orderInCategory="1"
         android:title="@string/action_cast"
         app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_queue_show"
+        android:icon="@drawable/ic_action_format_list_numbered"
+        android:orderInCategory="10"
+        android:title="@string/action_queue_show"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_about"
+        android:orderInCategory="100"
         android:title="@string/action_about"
         app:showAsAction="never" />
 
